Revision history for Perl distribution Test-Class-Moose

{{$NEXT}}
        * Added a new report object, Test::Class::Moose::Report::Class. Each
          class that is tested gets one of these reports. The Class report in
          turn contains 1+ Instance reports, which in turn contains 1+ Method
          reports.
        * The TCM::Report::Instance class now has two new methods,
          test_startup_method and test_shutdown_method. These methods return
          TCM::Report::Method objects with information about these control
          methods.
        * The TCM::Report::Method class now has two new methods,
          test_setup_method and test_teardown_method. These methods return
          TCM::Report::Method objects with information about these control
          methods.
        * Removed the Test::Class::Moose::Report::Instance's error
          attribute. Contrary to the documentation, this attribute was never
          populated.
        * Renamed Test::Class::Moose::Report::Method->instance_report method
          to instance. This is a better match for other report-related
          methods, which don't include a "_report" suffix.
        * Removed the long-deprecated tests_run methods from TCM::Report and
          TCM::Report::Method.
        * Removed the long-deprecated tests_run methods from
          TCM::Report::Method->add_to_plan method.

0.62 2015-08-30
        * Make Test::Class::Moose::Config load Test::Builder. It used this
          module without loading it, which could cause issues if nothing else
          loaded it. Fixed by Andy Jack. (GitHub PR #55).

0.61 2015-08-15
        * Added a randomize_classes attribute which can be passed to
          Test::Class::Moose::Runner. Implemented by Andy Jack. GitHub PR #53.
        * Test::Class::Moose::Role now enables strict and warnings in the
          caller just like Test::Class::Moose does. GitHub PR #54.
        * Documented the current_instance and current_method methods for